--- a/Advanced-Flask-Lab/templates/index.html
+++ b/Advanced-Flask-Lab/templates/index.html
@@ -38,7 +38,7 @@
                 
                 <div>
                       <a href="">
-                        <img src="static/images/thumbs/01.jpg" alt="" />
+                        <img src="static/images/thumbs/01.jpg" alt="" ></img>
                         <h3>Caption... blah blah blah</h3>
                       </a>
                 
@@ -60,7 +60,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>&copy; MEET's (fake) Instagram. No rights reserved. 
+						<p>&copy; MEET's (fake) Instagram. No rights reserved.</p>
 					</footer>
 
 			</div>
